tests/gcc-torture/breakdown/fail/internal/20040208-1.c
#include "cerberus.h"
int 
main (void)
{
  long double x;

  x = 0x1.0p-500L;
  x *= 0x1.0p-522L;
  if (x != 0x1.0p-1022L)
    abort ();
  exit (0);
}
